# voice_assistant_v_1_0

./: .gitignore  README.md  pyproject.toml
voice_assistant_v_1_0/: engine_1.py
